tools/tests/errors/type_error_add.experr
unsupported operand type 'String' for arithmetic with 'Integer'
